# aop-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  information.md  pyproject.toml
.github/workflows/: ci.yml  dep-audit.yml  ngra-service-image.yml  security.yml  semgrep.yml
.taskmaster/: state.json
.taskmaster/docs/: aop_mcp_overview.md
.taskmaster/tasks/: aop_mcp.json  tasks.json
docs/: architecture.md  mcp-fix-summary.md  opensourcing-checklist.md  trust-auditability.md
docs/adr/: 0001-initial-architecture.md  0002-trackb-scientific-invariants-gate.md  README.md  agent-workflow-notes.md  architecture-drivers.md  draft-store-data-model.md  threat-model-write-path.md
docs/contracts/: README.md  endpoint-docs.md  endpoint-matrix.md  oecd-aligned-schema.md  tool-catalog.md
docs/evaluations/: trust-scenarios.md  trust-scenarios.xml
docs/quickstarts/: README.md  find-aop.md  live-scientific-examples.md  oecd-draft-authoring.md  publish.md
docs/reports/: mvp-vs-blueprint.md  performance.md  testing-validation.md
docs/semantic/: ontology-alignment.md
governance/: __init__.py  errors.py  project_to_spine.py  source_contract.py  spine_bridge.py
governance/contracts/: assess_aop_confidence.response.strict.schema.json
governance/fixtures/: assess_aop_confidence.pristine.json
scripts/: benchmarks.py  build_spine_projection_goldens.py  check_endpoints.py  check_no_secrets.py  generate_registry_aop_draft_review_goldens.py  scientific_invariants_gate.py  test_mcp_endpoints.sh  vendor_verify.py
src/adapters/: __init__.py  aop_db.py  aop_wiki.py  comp_tox.py  fixtures.py  hgnc.py  sparql_client.py
src/agent/: workflows.py
src/app/: main.py
src/instrumentation/: audit.py  cache.py  logging.py  metrics.py
src/semantic/: __init__.py  applicability.py  curie_service.py  (+3 more)
(+127 files in other folders)
