[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aop-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Adverse Outcome Pathway tooling."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "AOP MCP Team"}
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.24,<1.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.26,<1.0",
  "jsonschema>=4.21,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8.0",
  "pytest-asyncio>=0.21,<1.0",
  "anyio>=3.7,<4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
